--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
           </div>
         </div>
 
+               <!-- Project 3: E-Library -->
+        <div class="col-md-6" data-aos="zoom-in">
+          <div class="card h-100 shadow">
+            <div class="card-body">
+              <h5 class="card-title">E-Library</h5>
+              <p class="card-text"> E-Library interaktif berbasis web yang dirancang untuk memudahkan pengelolaan data buku dan pengunjung di lingkungan sekolah. Dibangun dengan teknologi web responsif..</p>
+              <a href="https://7arzz.github.io/E-Library-/" class="btn btn-primary" target="_blank">Lihat Proyek</a>
+            </div>
+          </div>
+        </div> 
+
       </div>
     </div>
   </section>
