--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
           </div>
         </div> 
 
+        <!-- Project 4: pisang gemoy-->
+        <div class="col-md-6" data-aos="zoom-in">
+          <div class="card h-100 shadow">
+            <div class="card-body">
+              <h5 class="card-title">E-Library</h5>
+              <p class="card-text"> Hasil dari perpaduan antara UMKM dengan teknologi terkini</p>
+              <a href="https://7arzz.github.io/Pisang-Gemoy/" class="btn btn-primary" target="_blank">Lihat Proyek</a>
+            </div>
+          </div>
+        </div> 
+
       </div>
     </div>
   </section>
