--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#about">About Me</a>
+          <a class="nav-link" href="#projects">Projects</a>
+          <a class="nav-link" href="#progress">progress</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </div>
       </div>
     </div>
@@ -41,10 +43,21 @@
     </div>
   </section>
 
-  <!-- ABOUT ME -->
-  <section id="about">
+<!-- ABOUT ME -->
+<section id="about">
+  <div class="container" data-aos="fade-right">
+    <h1 class="display-4">Tentang Saya</h1>
+    <p class="lead">Halo! Saya Tarzz, seorang pelajar yang suka ngoding dan bercita-cita jadi Full-Stack Developer. Saat ini lagi fokus belajar web development, mulai dari desain sampai backend. Saya juga suka explore dunia bisnis digital dan teknologi terbaru. Yuk berkembang bareng!</p>
+   <p class="sub"> 💻 Fokus: Web Development, UI/UX Design, Bisnis Digital<br>
+       🚀 Target: Menjadi Full-Stack Developer sebelum 2030<br>
+       📍 Lokasi: Indonesia</p>
+  </div>
+</section>
+  
+  <!-- PROGRESS -->
+  <section id="progress">
     <div class="container" data-aos="fade-right">
-      <h1 class="display-4">About Me</h1>
+      <h1 class="display-4">Progres</h1>
       <p class="lead">Progres selama menjadi Web Developer</p>
 
       <div class="progress mb-3" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" data-aos="fade-left">
@@ -131,7 +144,7 @@
 </section>
 
   <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-4 mt-5" data-aos="fade-in">
+  <footer class="bg-dark text-white text-center py-4 mt-5" >
     <div class="container">
       <p class="mb-1">&copy; 2025 Tarzz. All rights reserved.</p>
       <p class="mb-0">
